# dreamnova-v5

./: .gitignore  CLAUDE.md  Cargo.toml  PUBLISH_GUIDE.md  README.md
apps/web/: .env.local.example  next.config.ts  package.json  tailwind.config.ts
apps/web/scripts/: create-rag-prices.js
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(auth)/register/: page.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/(dashboard)/hafatsa/: page.tsx
apps/web/src/app/(dashboard)/nfc/: page.tsx
apps/web/src/app/(dashboard)/orders/: page.tsx
apps/web/src/app/(dashboard)/overview/: page.tsx
apps/web/src/app/(dashboard)/settings/: page.tsx
apps/web/src/app/(docs)/: layout.tsx
apps/web/src/app/(docs)/architecture/: page.tsx
apps/web/src/app/(docs)/whitepaper/: page.tsx
apps/web/src/app/(marketing)/: layout.tsx  page.tsx
apps/web/src/app/(marketing)/contact/: page.tsx
apps/web/src/app/(marketing)/manifesto/: page.tsx
apps/web/src/app/(marketing)/nova-key/: page.tsx
apps/web/src/app/(marketing)/privacy/: page.tsx
apps/web/src/app/(marketing)/rag/: page.tsx
apps/web/src/app/(marketing)/rag/success/: page.tsx
apps/web/src/app/(marketing)/refund/: page.tsx
apps/web/src/app/(marketing)/research/: page.tsx
apps/web/src/app/(marketing)/source-code/: page.tsx
apps/web/src/app/(marketing)/terms/: page.tsx
apps/web/src/app/(portal)/: layout.tsx
apps/web/src/app/(portal)/azamra/: page.tsx
apps/web/src/app/(portal)/tikkun/: page.tsx
apps/web/src/app/(portal)/unlock/: page.tsx
apps/web/src/app/(shop)/: layout.tsx
apps/web/src/app/(shop)/checkout/: page.tsx
apps/web/src/app/(shop)/success/: page.tsx
apps/web/src/app/api/auth/: route.ts
apps/web/src/app/api/contact/: route.ts
apps/web/src/app/api/nfc/: route.ts
apps/web/src/app/api/stripe/checkout/: route.ts
apps/web/src/app/api/stripe/rag-checkout/: route.ts
apps/web/src/app/api/stripe/webhook/: route.ts
apps/web/src/app/api/waitlist/: route.ts
apps/web/src/app/gate/: page.tsx
apps/web/src/components/marketing/: Architecture.tsx  CTASection.tsx  CodeShowcase.tsx  Features.tsx  Hero.tsx  MetricsBar.tsx  Pricing.tsx  SystemDiagram.tsx  TechStack.tsx
apps/web/src/components/shared/: Footer.tsx  Navbar.tsx
apps/web/src/components/ui/: Button.tsx  Card.tsx
apps/web/src/lib/: animations.ts  constants.ts  stripe.ts  supabase.ts
apps/web/src/types/: index.ts
crates/antimatrix/: Cargo.toml  README.md
crates/antimatrix/src/: lib.rs
crates/dag-ledger/: Cargo.toml  README.md
crates/dag-ledger/src/: lib.rs  network.rs
crates/evolutrix/: Cargo.toml  README.md
crates/evolutrix/src/: lib.rs
crates/nfc-bridge/: Cargo.toml  README.md
crates/nfc-bridge/src/: lib.rs
crates/nova-morph/: Cargo.toml  LICENSE-MIT  README.md
crates/nova-morph/src/: lib.rs
crates/tzimtzum/: Cargo.toml  README.md
crates/tzimtzum/src/: identity.rs  lib.rs  vdf_nonce.rs
crates/vdf/: Cargo.toml  LICENSE-APACHE  README.md
crates/vdf/src/: lib.rs
docs/architecture/: README.md
docs/patents/: README.md
docs/whitepaper/: README.md
python/: pyproject.toml
python/esther/: __init__.py  config.py  entropy.py  gnn.py  monitor.py
scripts/: create-rag-prices.js
