[package]
name = "antimatrix"
readme = "README.md"
description = "Formal verification hypervisor — CSDD validator with 6 isolation levels"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
sha2 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
