[package]
name = "dag-ledger"
readme = "README.md"
description = "DAG-UTXO ledger — Proof-of-Shareholding consensus with VDF temporal barriers"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
vdf = { path = "../vdf" }
num-bigint = { workspace = true }
