[package]
name = "evolutrix"
description = "Polymorphic compiler core — AST mutation, DSLR, ISR, and Moving Target Defense"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rand = { workspace = true }
sha2 = { workspace = true }
aes = { workspace = true }
thiserror = { workspace = true }
