[package]
name = "nfc-bridge"
description = "DESFire EV3 NFC interface — APDU commands, PC/SC bridge, mutual authentication"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
sha2 = { workspace = true }
aes = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
