[package]
name = "tzimtzum"
readme = "README.md"
description = "zk-SNARK circuit for NFC identity verification — Plonkish arithmetization"
keywords = ["zkp", "zero-knowledge", "nfc", "identity", "halo2"]
categories = ["cryptography", "authentication"]
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
halo2 = ["dep:halo2_proofs"]

[dependencies]
sha2 = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
num-bigint = { workspace = true }
vdf = { path = "../vdf", version = "0.1.0" }
halo2_proofs = { version = "0.3", optional = true }
