[package]
name = "vdf"
readme = "README.md"
description = "Verifiable Delay Function — repeated squaring with Wesolowski/Pietrzak proofs"
keywords = ["vdf", "cryptography", "consensus", "blockchain", "wesolowski"]
categories = ["cryptography", "algorithms"]
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
